[gd_scene load_steps=2 format=3 uid="uid://c8o37nw5gfquw"]

[ext_resource type="Script" path="res://scripts/activities/Spelling.gd" id="1"]

[node name="Spelling" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="InstructionLabel" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Listen to the word and spell it correctly"
horizontal_alignment = 1
autowrap_mode = 3

[node name="PlayAudioButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "ðŸ”Š Play Audio"

[node name="AnswerInput" type="LineEdit" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
alignment = 1

[node name="SubmitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "Submit"
